[Java] Allow building with Java versions beyond 8 and include idea plugin.