@@ -22,6 +22,7 @@ buildscript {
 plugins {
     id 'java'
     id 'java-library'
+    id 'idea'
     id 'com.github.johnrengelman.shadow' version '5.1.0' apply false
     id 'io.freefair.javadoc-links' version '4.1.3' apply false
     id 'biz.aQute.bnd.builder' version '4.2.0' apply false
@@ -31,7 +32,6 @@ defaultTasks 'clean', 'build', 'shadowJar', 'install'
 
 def agronaGroup = 'org.agrona'
 def agronaVersion = '1.0.12-SNAPSHOT'
-def agronaJavaVersion = JavaVersion.VERSION_1_8
 def externalJdk = true
 
 if (null == System.getenv("JAVA_HOME")) {
@@ -137,8 +137,11 @@ subprojects {
     checkstyle.toolVersion = '8.25'
 
     compileJava {
-        sourceCompatibility = agronaJavaVersion
-        targetCompatibility = agronaJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.compilerArgs << '-XDignore.symbol.file' // Suppress warnings about using Unsafe
         if (externalJdk) {
             options.fork = true
@@ -152,8 +155,11 @@ subprojects {
     }
 
     compileTestJava {
-        sourceCompatibility = agronaJavaVersion
-        targetCompatibility = agronaJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
@@ -217,8 +223,11 @@ project(':agrona') {
 
     compileGeneratedJava {
         dependsOn 'generatePrimitiveSpecialisations'
-        sourceCompatibility = agronaJavaVersion
-        targetCompatibility = agronaJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
         classpath += sourceSets.main.runtimeClasspath
@@ -291,14 +300,14 @@ project(':agrona-agent') {
 
     jar {
         manifest.attributes(
-        'Implementation-Title': 'Agrona',
-        'Implementation-Version': "${agronaVersion}",
-        'Implementation-Vendor': 'Real Logic Limited',
-        'Premain-Class': 'org.agrona.agent.BufferAlignmentAgent',
-        'Agent-Class': 'org.agrona.agent.BufferAlignmentAgent',
-        'Can-Redefine-Classes': 'true',
-        'Can-Retransform-Classes': 'true',
-        'Automatic-Module-Name': 'org.agrona.agent'
+            'Implementation-Title': 'Agrona',
+            'Implementation-Version': "${agronaVersion}",
+            'Implementation-Vendor': 'Real Logic Limited',
+            'Premain-Class': 'org.agrona.agent.BufferAlignmentAgent',
+            'Agent-Class': 'org.agrona.agent.BufferAlignmentAgent',
+            'Can-Redefine-Classes': 'true',
+            'Can-Retransform-Classes': 'true',
+            'Automatic-Module-Name': 'org.agrona.agent'
         )
     }
 
@@ -308,14 +317,14 @@ project(':agrona-agent') {
         }
 
         manifest.attributes(
-        'Implementation-Title': 'Agrona',
-        'Implementation-Version': "${agronaVersion}",
-        'Implementation-Vendor': 'Real Logic Limited',
-        'Premain-Class': 'org.agrona.agent.BufferAlignmentAgent',
-        'Agent-Class': 'org.agrona.agent.BufferAlignmentAgent',
-        'Can-Redefine-Classes': 'true',
-        'Can-Retransform-Classes': 'true',
-        'Automatic-Module-Name': 'org.agrona.agent.all'
+            'Implementation-Title': 'Agrona',
+            'Implementation-Version': "${agronaVersion}",
+            'Implementation-Vendor': 'Real Logic Limited',
+            'Premain-Class': 'org.agrona.agent.BufferAlignmentAgent',
+            'Agent-Class': 'org.agrona.agent.BufferAlignmentAgent',
+            'Can-Redefine-Classes': 'true',
+            'Can-Retransform-Classes': 'true',
+            'Automatic-Module-Name': 'org.agrona.agent.all'
         )
 
         relocate 'net.bytebuddy', 'org.agrona.shadow.net.bytebuddy'
